ajout meta name description page index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head lang="fr">
         <title>Bienvenue sur les monuments de Paris en fête !</title>
         <meta charset="UTF-8">
+        <meta name="description" content="Une journée pour découvrir autrement 10 monuments de Paris en fête">
         <meta name="viewport" content="width=device-width, initial-scale=1">
        
         <!-- FONTS -->
